--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Testnet incentive live now, let's join and give feedback."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/newPict128x128-4.ico" />
     <!--
