update: img og, add web analitic

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <meta property="og:type" content="article" />
     <meta property="og:description" content="🎉️ Mint Some NFTs Testnet| 🎉️ Stake Minted NTFs| 🎉️Follow @FlappyOwlNft on X" />
     <meta name="keywords" content="NFT,FlappyOwl NFT,Ethereum,Crypto,Opensea,Flappyowl,Onchain Nft, Testnet" />
-    <meta property="og:image" content="%PUBLIC_URL%/flappyowl.svg" />
+    <meta property="og:image" content="%PUBLIC_URL%/og-img.png" />
     <meta property="og:url" content="https://opensea.io/collection/flappyowl" />
     <meta name="twitter:card" content="summary_large_image" />
   </head>
